--- a/ARSports/ARSports.csproj
+++ b/ARSports/ARSports.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Assets\Scripts\FoodOptions.cs" />
     <Compile Include="Assets\Scripts\FoodOptionsSelection.cs" />
     <Compile Include="Assets\Scripts\FootballJerseyLogic.cs" />
+    <Compile Include="Assets\Scripts\FootballScript.cs" />
     <Compile Include="Assets\Scripts\GameLogic.cs" />
     <Compile Include="Assets\Scripts\GazeGestureManager.cs" />
     <Compile Include="Assets\Scripts\ListGameSelector.cs" />
